--- a/AlexCode_Original.ipynb
+++ b/AlexCode_Original.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,9 +399,14 @@
     "    #imports\n",
     "\n",
     "    #Pauli Matricies \n",
-    "    sx = np.array([[0, 1, 0], [1, 0, 0], [0, 0, 0]])\n",
-    "    sy = np.array([[0,-1j, 0],[1j,0, 0], [0, 0, 0]])\n",
-    "    sz = np.array([[1, 0, 0], [0, -1, 0], [0, 0, 0]])\n",
+    "    sx = np.array([[0, 1, 0], [1, 0, 0], [0, 0, 0]]) \n",
+    "    sy = np.array([[0,-1j, 0],[1j,0, 0], [0, 0, 0]]) \n",
+    "    sz = np.array([[1, 0, 0], [0, -1, 0], [0, 0, 0]]) \n",
+    "    l4 = np.array([[0,0,1],[0,0,0],[1,0,0]])\n",
+    "    l5 = np.array([[0,0,-1j],[0,0,0],[1j,0,0]])\n",
+    "    l6 = np.array([[0,0,0],[0,0,1],[0,1,0]])\n",
+    "    l7 = np.array([[0,0,0],[0,0,-1j],[0,1j,0]])\n",
+    "    l8 = 1/np.sqrt(3) * np.array([[1,0,0],[0,1,0],[0,0,-2]])\n",
     "    id = np.array([[1, 0, 0],[0, 1, 0],[0, 0, 0]])\n",
     "    \n",
     "    #Function definitions \n",
@@ -456,13 +461,13 @@
     "            else:\n",
     "                XX_temp = torch.tensor(np.kron(XX_temp,id))\n",
     "        H0 = H0 + J_coef[i]*XX_temp\n",
-    "    print(H0)\n",
     "    #H0 = H0 + sum_pauli(B,sz)\n",
     "    #print(H0) <- checking if the H0 is a XX gate \n",
     "\n",
     "    #Unitary group generation\n",
     "    SU = []\n",
-    "    pauli_int = [1, 2, 3, 4]#eq to [sx,sy,sz,id]\n",
+    "    #pauli_int = [1, 2, 3, 4, 5, 6, 7, 8, 9]#eq to [sx,sy,sz,id] -> [Gelman Matrix set]\n",
+    "    pauli_int = [1,2,3,4]\n",
     "    perms = list(product(pauli_int,repeat=N))#all permutations of paulis\n",
     "    for p in perms:#mapping integers to pauli \n",
     "        unitary = 1\n",
@@ -475,6 +480,16 @@
     "                unitary = torch.tensor(np.kron(unitary,sz),dtype=torch.cdouble)\n",
     "            elif pauli == 4:\n",
     "                unitary = torch.tensor(np.kron(unitary,id),dtype=torch.cdouble)\n",
+    "            elif pauli == 5:\n",
+    "                unitary = torch.tensor(np.kron(unitary,l5),dtype=torch.cdouble)\n",
+    "            elif pauli == 6:\n",
+    "                unitary = torch.tensor(np.kron(unitary,l6),dtype=torch.cdouble)\n",
+    "            elif pauli == 7:\n",
+    "                unitary = torch.tensor(np.kron(unitary,l7),dtype=torch.cdouble)\n",
+    "            elif pauli == 8:\n",
+    "                unitary = torch.tensor(np.kron(unitary,l8),dtype=torch.cdouble)\n",
+    "            elif pauli == 9:\n",
+    "                unitary = torch.tensor(np.kron(unitary,l4),dtype=torch.cdouble)\n",
     "        SU.append(unitary)\n",
     "\n",
     "    #These are the coefficients we are optimizing\n",
@@ -505,7 +520,7 @@
     "    else: scheduler=None; sched='None'\n",
     "\n",
     "    for n in range(0,N_iter):\n",
-    "        #Creating Hamilontian\n",
+    "        #Creating Drive Hamilontian\n",
     "        U_Exp = 1\n",
     "        for i in range(0,N):\n",
     "            U_Exp = torch.tensor(np.kron(U_Exp,id),dtype=dt)#initializing unitary\n",
@@ -516,10 +531,11 @@
     "\n",
     "        #Fidelity calulcation given by Nielsen Paper\n",
     "        fidelity = 0\n",
-    "        d = 3**N\n",
-    "        for i in range(0,len(SU)):\n",
-    "            eps_U = torch.matmul(torch.matmul(U_Exp,SU[i]),(U_Exp.conj().T))\n",
-    "            target_U = torch.matmul(torch.matmul(target_gate,(SU[i].conj().T)),(target_gate.conj().T))\n",
+    "        d = 2**N\n",
+    "        \n",
+    "        for U in SU:\n",
+    "            eps_U = torch.matmul(torch.matmul(U_Exp,U),(U_Exp.conj().T))\n",
+    "            target_U = torch.matmul(torch.matmul(target_gate,(U.conj().T)),(target_gate.conj().T))\n",
     "            tr = torch.trace(torch.matmul(target_U,eps_U))\n",
     "            fidelity = fidelity + tr\n",
     "        fidelity = abs(fidelity + d*d)/(d*d*(d+1))    \n",
@@ -643,95 +659,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-      "        [0, 0, 0, 0, 0, 0, 0, 0, 0]])\n",
-      "Itertation  20  out of  500 complete. Avg Infidelity:  0.8817923499831988\n",
-      "Itertation  40  out of  500 complete. Avg Infidelity:  0.8784253780829026\n",
-      "Itertation  60  out of  500 complete. Avg Infidelity:  0.8796331624154056\n",
-      "Itertation  80  out of  500 complete. Avg Infidelity:  0.877817805908589\n",
-      "Itertation  100  out of  500 complete. Avg Infidelity:  0.8777818559801673\n",
-      "Itertation  120  out of  500 complete. Avg Infidelity:  0.8777820899975519\n",
-      "Itertation  140  out of  500 complete. Avg Infidelity:  0.8777823255379691\n",
-      "Itertation  160  out of  500 complete. Avg Infidelity:  0.8777796709803395\n",
-      "Itertation  180  out of  500 complete. Avg Infidelity:  0.8777807611926955\n",
-      "Itertation  200  out of  500 complete. Avg Infidelity:  0.8777784342380681\n",
-      "Itertation  220  out of  500 complete. Avg Infidelity:  0.8777789283554143\n",
-      "Itertation  240  out of  500 complete. Avg Infidelity:  0.8777785763671726\n",
-      "Itertation  260  out of  500 complete. Avg Infidelity:  0.877777937100875\n",
-      "Itertation  280  out of  500 complete. Avg Infidelity:  0.8777784563218237\n",
-      "Itertation  300  out of  500 complete. Avg Infidelity:  0.8777778681657388\n",
-      "Itertation  320  out of  500 complete. Avg Infidelity:  0.8777779784129216\n",
-      "Itertation  340  out of  500 complete. Avg Infidelity:  0.8777779601033239\n",
-      "Itertation  360  out of  500 complete. Avg Infidelity:  0.8777778301665009\n",
-      "Itertation  380  out of  500 complete. Avg Infidelity:  0.8777778603881852\n",
-      "Itertation  400  out of  500 complete. Avg Infidelity:  0.8777778428855162\n",
-      "Itertation  420  out of  500 complete. Avg Infidelity:  0.8777778098653936\n",
-      "Itertation  440  out of  500 complete. Avg Infidelity:  0.8777777993971514\n",
-      "Itertation  460  out of  500 complete. Avg Infidelity:  0.877777814872463\n",
-      "Itertation  480  out of  500 complete. Avg Infidelity:  0.8777777820523565\n",
-      "Itertation  500  out of  500 complete. Avg Infidelity:  0.8777777922461457\n",
-      "The infidelity of the generated gate is: 0.8777777552604675\n"
+      "Itertation  20  out of  200 complete. Avg Infidelity:  0.7888217351615102\n",
+      "Itertation  40  out of  200 complete. Avg Infidelity:  0.05209369046721224\n",
+      "Itertation  60  out of  200 complete. Avg Infidelity:  0.14520844638411512\n",
+      "Itertation  80  out of  200 complete. Avg Infidelity:  9.480923220317461e-05\n",
+      "Itertation  100  out of  200 complete. Avg Infidelity:  1.7964291184946468e-05\n",
+      "Itertation  120  out of  200 complete. Avg Infidelity:  1.0286591003438872e-06\n",
+      "Itertation  140  out of  200 complete. Avg Infidelity:  1.891461760883395e-06\n",
+      "Itertation  160  out of  200 complete. Avg Infidelity:  1.3043215429942023e-07\n",
+      "Itertation  180  out of  200 complete. Avg Infidelity:  1.0586061183204265e-07\n",
+      "Itertation  200  out of  200 complete. Avg Infidelity:  1.1761451901293185e-07\n",
+      "The infidelity of the generated gate is: 6.235919158825709e-08\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.8777777552604675"
+       "6.235919158825709e-08"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],\n",
+    "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],\n",
     "[0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0]],dtype=torch.cdouble)\n",
     "J = torch.tensor([[1,1],[1,1]])\n",
-    "fidelity_Qutrit(J,[1,1],30,CNOT_qutrit,100,500)"
+    "fidelity_Qutrit(J,[1,1],32,CNOT_qutrit,10*np.pi,200)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 0, 0, 1, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 1, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 1, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [1, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0, 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 1.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j],\n",
+      "        [0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j, 0.+0.j]],\n",
+      "       dtype=torch.complex128)\n"
+     ]
     }
    ],
    "source": [
-    "sx = np.array([[0, 1, 0], [1, 0, 0], [0, 0, 0]])\n",
-    "np.kron(sx,sx)"
+    "print(CNOT_qutrit)"
    ]
   },
   {
