--- a/Qutrit_ML.ipynb
+++ b/Qutrit_ML.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,6 @@
     "            else:\n",
     "                H0_temp = torch.tensor(np.kron(H0_temp,id))\n",
     "        H0 = H0 + J_coef[i]*H0_temp\n",
-    "    print(H0)\n",
     "\n",
     "    #Generating Energy Levels \n",
     "    #H0 = H0 + sum_pauli(B,sz) <- Original from Alexs code. \n",
@@ -173,7 +172,7 @@
     "    # MACHINE LEARNING STUFF\n",
     "\n",
     "    #These are the coefficients we are optimizing\n",
-    "    R = torch.rand([M,2*N], dtype=torch.double) *2*np.pi # Random initialization (between 0 and 2pi)\n",
+    "    R = torch.rand([M,3**N -1], dtype=torch.double) *2*np.pi # Random initialization (between 0 and 2pi)\n",
     "    R.requires_grad = True # set flag so we can backpropagate\n",
     "    #Optimizer settings(can be changed & opttimized)\n",
     "    lr=0.3#learning rate\n",
@@ -184,7 +183,7 @@
     "    elif opt=='ADAMW': optimizer = torch.optim.AdamW([R], lr = lr, weight_decay=0.01)\n",
     "    elif opt=='ADAMax': optimizer = torch.optim.Adamax([R], lr = lr, weight_decay=0.01)\n",
     "    elif opt=='RMSprop': optimizer = torch.optim.RMSprop([R], lr = lr, momentum=0.2)\n",
-    "    elif opt=='Rprop': optimizer = torch.optim.Rprop([R], lr = lr)\n",
+    "    elif opt=='Rprop': optmizer = torch.optim.Rprop([R], lr = lr)\n",
     "    elif opt=='Adadelta': optimizer = torch.optim.Adadelta([R], lr = lr) \n",
     "    elif opt=='Adagrad': optimizer = torch.optim.Adagrad([R], lr = lr)\n",
     "    elif opt=='SGD': optimizer = torch.optim.SGD([R], lr = lr, momentum=0.99, nesterov=True)\n",
@@ -208,7 +207,8 @@
     "\n",
     "        for m in range(0,M):#Product of pulses\n",
     "            pulse_coef = R[m] \n",
-    "            H1 = sum_pauli(pulse_coef[:N],raiseOne + raiseOne.T) + sum_pauli(pulse_coef[N:],sqrt(2)*(raiseTwo + raiseTwo.T))\n",
+    "            step = int(len(pulse_coef)/4)\n",
+    "            H1 = sum_pauli(pulse_coef[:step],raiseOne + raiseOne.T) + sum_pauli(pulse_coef[step:2*step],-1j*(raiseOne + raiseOne.T)) + sum_pauli(pulse_coef[2*step:3*step],sqrt(2)*(raiseTwo + raiseTwo.T)) + sum_pauli(pulse_coef[3*step:],sqrt(2)*(1j*(raiseTwo + raiseTwo.T)))\n",
     "            U_Exp = torch.matmul(torch.matrix_exp(-1j*(H0+H1)*t/M),U_Exp)\n",
     "\n",
     "        #Fidelity calulcation given by Nielsen Paper\n",
@@ -221,12 +221,13 @@
     "            tr = torch.trace(torch.matmul(target_U,eps_U))\n",
     "            fidelity = fidelity + tr\n",
     "        fidelity = abs(fidelity + d*d)/(d*d*(d+1))    \n",
+    "        print(fidelity)\n",
     "        infidelity = 1 - fidelity\n",
     "        infidelity_list[n] = infidelity.detach()\n",
     "        infidelity.backward()\n",
     "\n",
     "        #Printing statement\n",
-    "        if (n+1)%100==0: \n",
+    "        if (n+1)%20==0: \n",
     "            print('Itertation ', str(n+1), ' out of ', str(N_iter), 'complete. Avg Infidelity: ', str(infidelity.item()))\n",
     "\n",
     "        #optimizer \n",
@@ -251,49 +252,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Qutrit Sytem reaching 99\\% fidelity in pi/4 time for CNOT\n",
-      "tensor([[0.0000, 0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.0000, 0.0000, 1.4142, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 1.4142, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 1.0000, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 1.4142, 0.0000],\n",
-      "        [1.0000, 0.0000, 1.4142, 0.0000, 0.0000, 0.0000, 1.4142, 0.0000, 2.0000],\n",
-      "        [0.0000, 1.4142, 0.0000, 0.0000, 0.0000, 0.0000, 0.0000, 2.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 1.4142, 0.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 1.4142, 0.0000, 2.0000, 0.0000, 0.0000, 0.0000],\n",
-      "        [0.0000, 0.0000, 0.0000, 0.0000, 2.0000, 0.0000, 0.0000, 0.0000, 0.0000]],\n",
-      "       dtype=torch.float64)\n",
-      "Itertation  100  out of  500 complete. Avg Infidelity:  0.8717111400003361\n",
-      "Itertation  200  out of  500 complete. Avg Infidelity:  0.8509162855771952\n",
-      "Itertation  300  out of  500 complete. Avg Infidelity:  0.8323503147009504\n",
-      "Itertation  400  out of  500 complete. Avg Infidelity:  0.8191580206058122\n",
-      "Itertation  500  out of  500 complete. Avg Infidelity:  0.8151859590555959\n",
-      "The infidelity of the generated gate is: 0.8151859641075134\n"
+      "Qutrit Sytem reaching 99% fidelity for CNOT\n",
+      "tensor(16.7379, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(101.8202, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(20454660.1199, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "Itertation  20  out of  500 complete. Avg Infidelity:  nan\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "Itertation  40  out of  500 complete. Avg Infidelity:  nan\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n",
+      "tensor(nan, dtype=torch.float64, grad_fn=<DivBackward0>)\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.8151859641075134"
-      ]
-     },
-     "execution_count": 112,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-57-1ee737bac1b7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m [0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n\u001b[1;32m      4\u001b[0m \u001b[0mJ\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mfidelity_Qutrit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mJ\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m32\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mCNOT_qutrit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpi\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m500\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-56-395ffffb924a>\u001b[0m in \u001b[0;36mfidelity_Qutrit\u001b[0;34m(J, B, M, target_gate, t, N_iter)\u001b[0m\n\u001b[1;32m    171\u001b[0m         \u001b[0minfidelity\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mfidelity\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    172\u001b[0m         \u001b[0minfidelity_list\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minfidelity\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdetach\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 173\u001b[0;31m         \u001b[0minfidelity\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    174\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m         \u001b[0;31m#Printing statement\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/py7/lib/python3.7/site-packages/torch/_tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    487\u001b[0m             )\n\u001b[1;32m    488\u001b[0m         torch.autograd.backward(\n\u001b[0;32m--> 489\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    490\u001b[0m         )\n\u001b[1;32m    491\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/envs/py7/lib/python3.7/site-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    197\u001b[0m     Variable._execution_engine.run_backward(  # Calls into the C++ engine to run the backward pass\n\u001b[1;32m    198\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors_\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 199\u001b[0;31m         allow_unreachable=True, accumulate_grad=True)  # Calls into the C++ engine to run the backward pass\n\u001b[0m\u001b[1;32m    200\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    201\u001b[0m def grad(\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
-    "print(\"Qutrit Sytem reaching 99\\% fidelity in pi/4 time for CNOT\")\n",
-    "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],\n",
-    "[0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0],[0,0,0,0,0,0,0,0,0]],dtype=torch.cdouble)\n",
+    "print(\"Qutrit Sytem reaching 99% fidelity for CNOT\")\n",
+    "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,0,1,0,0,0],\n",
+    "[0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n",
     "J = torch.tensor([[1,1],[1,1]])\n",
-    "fidelity_Qutrit(J,[1,1],32,CNOT_qutrit,np.pi,500)"
+    "fidelity_Qutrit(J,[1,1],32,CNOT_qutrit,np.pi/4,500)"
    ]
   },
   {
@@ -304,6 +349,26 @@
    "source": [
     "annhilate = np.array([[0,1,0],[0,0,sqrt(2)],[0,0,0]])\n",
     "create = annhilate.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8/4"
    ]
   },
   {
