Qutrit Testing for CNOT and Identity Completed

--- a/Qutrit_ML.ipynb
+++ b/Qutrit_ML.ipynb
@@ -236,9 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Itertation  50  out of  500 complete. Avg Infidelity:  0.6668540853001168\n",
+      "Itertation  100  out of  500 complete. Avg Infidelity:  0.12188696872874771\n",
+      "Itertation  150  out of  500 complete. Avg Infidelity:  0.06620903413448509\n",
+      "Itertation  200  out of  500 complete. Avg Infidelity:  0.03352852279408569\n",
+      "Itertation  250  out of  500 complete. Avg Infidelity:  0.021078520458632788\n",
+      "Itertation  300  out of  500 complete. Avg Infidelity:  0.015019297451007163\n",
+      "Itertation  350  out of  500 complete. Avg Infidelity:  0.01124172237670995\n",
+      "Itertation  400  out of  500 complete. Avg Infidelity:  0.007746816145300706\n",
+      "Itertation  450  out of  500 complete. Avg Infidelity:  0.0056685238385622005\n",
+      "Itertation  500  out of  500 complete. Avg Infidelity:  0.0045648347782324405\n"
+     ]
+    }
+   ],
    "source": [
     "CNOT_qutrit = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,0,1,0,0,0],\n",
     "[0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n",
@@ -266,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,9 +303,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[1.+0.j, 0.+0.j],\n",
+       "         [0.+0.j, 1.+0.j]], dtype=torch.complex128),\n",
+       " tensor([[ 1.+0.0000e+00j,  0.+0.0000e+00j],\n",
+       "         [ 0.+0.0000e+00j, -1.+1.2246e-16j]], dtype=torch.complex128),\n",
+       " tensor([[0.+0.j, 1.+0.j],\n",
+       "         [1.+0.j, 0.+0.j]], dtype=torch.complex128),\n",
+       " tensor([[ 0.+0.0000e+00j, -1.+1.2246e-16j],\n",
+       "         [ 1.+0.0000e+00j,  0.+0.0000e+00j]], dtype=torch.complex128)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Matrix_Basis_Gen(2)"
    ]
