--- a/Qutrit_ML.ipynb
+++ b/Qutrit_ML.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,23 +236,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Itertation  50  out of  500 complete. Avg Infidelity:  0.6668540853001168\n",
-      "Itertation  100  out of  500 complete. Avg Infidelity:  0.12188696872874771\n",
-      "Itertation  150  out of  500 complete. Avg Infidelity:  0.06620903413448509\n",
-      "Itertation  200  out of  500 complete. Avg Infidelity:  0.03352852279408569\n",
-      "Itertation  250  out of  500 complete. Avg Infidelity:  0.021078520458632788\n",
-      "Itertation  300  out of  500 complete. Avg Infidelity:  0.015019297451007163\n",
-      "Itertation  350  out of  500 complete. Avg Infidelity:  0.01124172237670995\n",
-      "Itertation  400  out of  500 complete. Avg Infidelity:  0.007746816145300706\n",
-      "Itertation  450  out of  500 complete. Avg Infidelity:  0.0056685238385622005\n",
-      "Itertation  500  out of  500 complete. Avg Infidelity:  0.0045648347782324405\n"
+      "Itertation  50  out of  666 complete. Avg Infidelity:  0.793482530935161\n",
+      "Itertation  100  out of  666 complete. Avg Infidelity:  0.41943588643418594\n",
+      "Itertation  150  out of  666 complete. Avg Infidelity:  0.15253006079235043\n",
+      "Itertation  200  out of  666 complete. Avg Infidelity:  0.0976512709264249\n",
+      "Itertation  250  out of  666 complete. Avg Infidelity:  0.041182241738322634\n",
+      "Itertation  300  out of  666 complete. Avg Infidelity:  0.018795269193259023\n",
+      "Itertation  350  out of  666 complete. Avg Infidelity:  0.014275980275554101\n",
+      "Itertation  400  out of  666 complete. Avg Infidelity:  0.010287948079664488\n",
+      "Itertation  450  out of  666 complete. Avg Infidelity:  0.0064569442890191064\n",
+      "Itertation  500  out of  666 complete. Avg Infidelity:  0.0038551446461007055\n",
+      "Itertation  550  out of  666 complete. Avg Infidelity:  0.0023545154930116885\n",
+      "Itertation  600  out of  666 complete. Avg Infidelity:  0.0020323419737325876\n",
+      "Itertation  650  out of  666 complete. Avg Infidelity:  0.0013171225674685205\n"
      ]
     }
    ],
@@ -262,7 +265,75 @@
     "Identity = torch.tensor([[1,0,0,0,0,0,0,0,0],[0,1,0,0,0,0,0,0,0],[0,0,1,0,0,0,0,0,0],[0,0,0,1,0,0,0,0,0],[0,0,0,0,1,0,0,0,0],[0,0,0,0,0,1,0,0,0],\n",
     "[0,0,0,0,0,0,1,0,0],[0,0,0,0,0,0,0,1,0],[0,0,0,0,0,0,0,0,1]],dtype=torch.cdouble)\n",
     "J = torch.tensor([[1,1],[1,1]])\n",
-    "pulse_frequencies = fidelity_Qutrit(J,[1,1],16,Identity,np.pi,500)"
+    "pulse_frequencies = fidelity_Qutrit(J,[1,1],24,CNOT_qutrit,np.pi,666)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-2.7287e+00, -2.0758e+00,  6.2595e+00, -8.5197e-01,  4.1646e+00,\n",
+       "         -1.6696e+00,  2.8960e+00,  4.4508e+00],\n",
+       "        [ 6.6742e-01,  2.4075e+00,  3.2326e-01,  2.0354e+00,  9.3165e-01,\n",
+       "         -5.6506e-01,  5.6421e-01,  7.3800e-01],\n",
+       "        [ 5.4242e+00,  6.4310e+00,  5.2013e+00, -3.2477e+00,  1.4526e+00,\n",
+       "          4.7958e+00,  5.6092e+00,  5.5086e+00],\n",
+       "        [ 9.9102e+00, -6.5240e-01,  1.7721e+00,  8.1323e+00,  3.1306e+00,\n",
+       "          1.2981e+00,  2.6033e+00,  2.6918e+00],\n",
+       "        [ 6.0507e+00,  7.7076e-01,  1.0766e+01,  5.0666e+00,  4.9137e+00,\n",
+       "         -6.8607e-01,  2.8551e+00,  1.8570e+00],\n",
+       "        [ 2.4293e+00, -1.3757e+00,  3.5485e+00,  2.2085e+00, -1.2807e+00,\n",
+       "          9.7935e-01,  5.0491e+00,  2.0217e+00],\n",
+       "        [ 2.0788e+00, -5.2428e-01,  8.6794e+00,  4.1052e+00,  1.5588e+00,\n",
+       "          8.8245e+00,  4.6611e+00,  1.8001e+00],\n",
+       "        [ 4.2209e+00,  1.6565e+00,  1.2445e+00,  2.6014e-01,  3.8382e+00,\n",
+       "          7.8819e+00,  8.2639e-01,  1.5025e+00],\n",
+       "        [ 2.1618e+00,  7.1281e+00, -4.0772e+00,  1.8619e+00, -1.4838e-01,\n",
+       "         -5.7774e-01,  1.0500e+00,  3.4444e+00],\n",
+       "        [ 2.1682e+00,  1.0274e+01,  2.1245e+00,  5.1993e+00, -2.5479e+00,\n",
+       "         -1.9781e+00,  4.1669e+00,  5.3022e+00],\n",
+       "        [-1.5841e+00,  7.3913e+00,  5.4447e+00,  9.0883e+00, -7.9709e-01,\n",
+       "          3.1958e+00,  4.5915e+00,  6.2356e+00],\n",
+       "        [ 3.7370e+00,  6.5048e+00,  7.2183e+00,  1.0795e+01, -7.4354e-01,\n",
+       "          3.1914e+00,  5.4298e+00,  2.7096e+00],\n",
+       "        [ 1.7976e-01,  8.5870e+00,  4.7530e+00,  5.7201e+00,  7.1740e+00,\n",
+       "          2.0524e+00,  2.5724e+00,  4.3258e+00],\n",
+       "        [ 4.6120e+00,  2.2603e-01,  2.5738e+00, -4.0647e-01,  5.1716e+00,\n",
+       "          1.6290e+00,  5.9902e+00,  5.3659e+00],\n",
+       "        [ 1.0246e+01, -4.3596e+00, -3.8695e-02, -3.0252e+00,  3.0615e+00,\n",
+       "          5.9432e-02,  1.2736e+00,  3.1851e+00],\n",
+       "        [ 8.3688e+00, -6.8533e-01,  4.5350e+00, -5.9165e-01, -1.0937e-02,\n",
+       "          1.1485e+00,  1.1272e+00,  3.0113e+00],\n",
+       "        [ 5.6471e+00,  1.5097e+00,  4.0288e+00,  6.0539e+00,  3.8429e+00,\n",
+       "          2.4462e+00,  4.3713e+00,  8.2506e-01],\n",
+       "        [ 1.1181e+01,  6.0202e+00,  6.9342e+00,  4.3194e+00,  1.1142e+00,\n",
+       "          7.2538e+00,  4.4701e+00,  3.2131e+00],\n",
+       "        [ 5.3599e+00,  7.7464e+00,  8.1887e-01, -1.0802e+00,  9.9854e-01,\n",
+       "          8.2373e+00,  2.5342e+00,  6.1696e+00],\n",
+       "        [ 2.9473e+00,  6.4772e+00,  2.6688e+00, -2.4219e+00, -7.0782e-01,\n",
+       "          1.8010e+00,  3.7758e+00,  1.9188e+00],\n",
+       "        [-2.0328e+00,  5.9013e-01,  7.1682e+00,  5.5681e+00, -1.4277e+00,\n",
+       "         -5.2727e+00,  2.5469e+00,  2.1852e-01],\n",
+       "        [ 5.5879e+00, -2.5768e+00,  4.0449e+00,  5.9077e+00,  1.3149e+00,\n",
+       "          2.4819e+00,  2.1485e+00,  2.7955e+00],\n",
+       "        [ 4.3938e+00,  2.7235e-01,  3.0238e+00,  4.8858e+00,  2.9403e+00,\n",
+       "          3.6154e+00,  4.0425e+00,  1.6758e+00],\n",
+       "        [-9.5818e-01, -1.5211e+00,  2.6646e+00,  9.8169e+00,  4.5732e+00,\n",
+       "          2.5016e-01,  1.4564e+00,  5.5487e-01]], dtype=torch.float64,\n",
+       "       requires_grad=True)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pulse_frequencies"
    ]
   },
   {
