Changed Hamiltonian to PRA Paper

--- a/Qutrit_ML.ipynb
+++ b/Qutrit_ML.ipynb
@@ -79,6 +79,14 @@
     "    sx02 = np.array([[0,0,1],[0,1,0],[1,0,0]])\n",
     "    sy02 = np.array([[0,0,-1j],[0,1,0],[1j,0,0]])\n",
     "    sz = np.array([[1,0,0],[0,-1,0],[0,0,1]])\n",
+    "\n",
+    "    #Sigma +/- for example paper \n",
+    "    raiseOne = np.array([[0,0,0],[1,0,0],[0,0,0]])\n",
+    "    raiseTwo = np.array([[0,0,0],[0,0,0],[0,1,0]])\n",
+    "\n",
+    "    # Annhilation and Creation Operators\n",
+    "    annhilate = np.array([[0,1,0],[0,0,np.sqrt(2)],[0,0,0]])\n",
+    "    create = annhilate.T\n",
     "    \n",
     "    #Function definitions \n",
     "    def zero_mat(N):#Generates matrix of zeros\n",
@@ -125,14 +133,14 @@
     "    permuts.reverse()#All permutations of ZZ coupling stored as bit arrays\n",
     "    H0 = zero_mat(N)\n",
     "    ##Changed gates ZZ -> XX\n",
-    "    for i,u in enumerate(permuts):#summing ZZ permutations and J constants\n",
-    "        XX_temp = 1\n",
+    "    for i,u in enumerate(permuts):\n",
+    "        H0_temp = 1\n",
     "        for p in u:\n",
     "            if p==1:\n",
-    "                XX_temp = torch.tensor(np.kron(XX_temp,l1))\n",
+    "                H0_temp = torch.tensor(np.kron(H0_temp,(annhilate + create)))\n",
     "            else:\n",
-    "                XX_temp = torch.tensor(np.kron(XX_temp,id))\n",
-    "        H0 = H0 + J_coef[i]*XX_temp\n",
+    "                H0_temp = torch.tensor(np.kron(H0_temp,id))\n",
+    "        H0 = H0 + J_coef[i]*H0_temp\n",
     "    #H0 = H0 + sum_pauli(B,sz)\n",
     "\n",
     "    #These are the coefficients we are optimizing\n",
